@@ -85,6 +85,7 @@ import greencity.dto.notification.EmailNotificationDto;
 import greencity.dto.notification.NotificationDto;
 import greencity.dto.openhours.OpeningHoursDto;
 import greencity.dto.ownsecurity.OwnSecurityVO;
+import greencity.dto.photo.PhotoVO;
 import greencity.dto.place.AddPlaceDto;
 import greencity.dto.place.FilterPlaceCategory;
 import greencity.dto.place.PlaceAddDto;
@@ -179,6 +180,11 @@ import jakarta.persistence.TupleElement;
 import org.hibernate.sql.results.internal.TupleElementImpl;
 import org.hibernate.sql.results.internal.TupleImpl;
 import org.hibernate.sql.results.internal.TupleMetadata;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.mock.web.MockMultipartFile;
 import org.springframework.web.multipart.MultipartFile;
 import java.io.IOException;
@@ -1011,7 +1017,14 @@ public class ModelUtils {
 
     public static FactOfTheDay getFactOfTheDay() {
         return new FactOfTheDay(1L, "Fact of the day",
-            Collections.singletonList(ModelUtils.getFactOfTheDayTranslation()), ZonedDateTime.now(),
+            List.of(ModelUtils.getFactOfTheDayTranslation(), FactOfTheDayTranslation.builder()
+                .id(2L)
+                .content("Контент")
+                .language(new Language(2L, "ua", Collections.emptyList(), Collections.emptyList(),
+                    Collections.emptyList()))
+                .factOfTheDay(null)
+                .build()),
+            ZonedDateTime.now(),
             Collections.emptySet());
     }
 
@@ -1021,8 +1034,7 @@ public class ModelUtils {
 
     public static FactOfTheDayPostDTO getFactOfTheDayPostDto() {
         return new FactOfTheDayPostDTO(1L, "name",
-            Collections.singletonList(
-                new FactOfTheDayTranslationEmbeddedPostDTO("content", AppConstant.DEFAULT_LANGUAGE_CODE)),
+            Collections.singletonList(getFactOfTheDayTranslationEmbeddedPostDTO()),
             Collections.singletonList(25L));
     }
 
@@ -1150,7 +1162,14 @@ public class ModelUtils {
     }
 
     public static FactOfTheDayTranslationDTO getFactOfTheDayTranslationDTO() {
-        return new FactOfTheDayTranslationDTO(1L, "content");
+        return new FactOfTheDayTranslationDTO(1L, List.of(getFactOfTheDayTranslationEmbeddedPostDTO()));
+    }
+
+    public static FactOfTheDayTranslationEmbeddedPostDTO getFactOfTheDayTranslationEmbeddedPostDTO() {
+        return FactOfTheDayTranslationEmbeddedPostDTO.builder()
+            .content("content")
+            .languageCode(AppConstant.DEFAULT_LANGUAGE_CODE)
+            .build();
     }
 
     public static LocationAddressAndGeoDto getLocationAddressAndGeoDto() {
@@ -1178,8 +1197,11 @@ public class ModelUtils {
     }
 
     public static Photo getPhoto() {
-        return Photo.builder()
+        return greencity.entity.Photo.builder()
             .id(1L)
+            .user(getUser()).id(1L)
+            .place(getPlace()).id(1L)
+            .comment(getPlaceComment()).id(1L)
             .name("photo")
             .build();
     }
@@ -2906,5 +2928,25 @@ public class ModelUtils {
             .id(1L)
             .amountLikes(2)
             .build();
+    }
+
+    public static PhotoVO getPhotoVO() {
+        return PhotoVO.builder().id(1L).name("photo").commentId(1L).placeId(1L).userId(1L).build();
+    }
+
+    public static Pageable getSortedPageable() {
+        return PageRequest.of(0, 10, Sort.by(Sort.Direction.DESC, "id"));
+    }
+
+    public static List<UserManagementVO> getListUserManagementVO() {
+        return List.of(UserManagementVO.builder()
+            .id(1L)
+            .userStatus(ACTIVATED)
+            .email("Test@gmail.com")
+            .role(Role.ROLE_ADMIN).build());
+    }
+
+    public static Page<UserManagementVO> getPage() {
+        return new PageImpl<>(getListUserManagementVO(), getSortedPageable(), 1);
     }
 }
